--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
 <!-- Aplicação do estilo modal -->
 
-    <div id="modal">
+    <div id="modal" class="hide">
         <div class="content">
             <div class="header">
                 <h1>Pontos de coleta</h1>
-                <a href="">Fechar</a>
+                <a href="#">Fechar</a>
             </div>
             <form action="">
                 <label for="search">Cidade</label>
@@ -69,5 +69,6 @@
             </form>
         </div>
     </div>
+<script src="/scripts/index.js"></script>
 </body>
 </html> 
